Fix: heading behind navbar!

--- a/landing-page/main.css
+++ b/landing-page/main.css
@@ -49,7 +49,7 @@ header{
     justify-content: center;
     align-items: center;
     margin: .5rem;
-    padding: .5rem;
+    padding: 4rem 1rem;
     width: 100%;
 }
 .subhead,.head-desc{
